@@ -6,6 +6,7 @@ v0.4.0:
        * replace Esky.install_update(v) with Esky.auto_update().
        * new utility methods Esky.install_version(v)/Esky.uninstall_version(v).
        * rename Esky.fetch_update(v) to Esky.fetch_version(v)
+       * merge VersionFinder.prepare_version into VersionFinder.fetch_version
     * made all VersionFinder methods take the target esky as first argument
       (in preparation for differential update support in a later version).
     * added support for freezing with cx_Freeze.
